# owner

./: README.md  owner.ipynb  setup.cfg
.github/workflows/: ci.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  table_of_contents.html
docs/_modules/: index.html
docs/_modules/owner/: base.html  util.html
docs/_sources/: index.rst.txt
docs/_sources/module_docs/: owner.rst.txt
docs/_sources/module_docs/owner/: util.rst.txt
docs/module_docs/: owner.html
docs/module_docs/owner/: base.html  util.html
docsrc/: conf.py  index.rst  table_of_contents.rst
docsrc/module_docs/owner/: base.rst
owner/: __init__.py  base.py  util.py
