[metadata]
name = owner
version = 0.0.1
url = https://github.com/thorwhalen/owner
platforms = any
description_file = README.md
description = Tools to prove ownerhip of content
license = mit
keywords = 
root_url = https://github.com/thorwhalen/
author = Thor Whalen
display_name = owner

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

