[metadata]
name = owner
version = 0.0.9
url = https://github.com/thorwhalen/owner
platforms = any
description_file = README.md
description = Tools to prove ownership of content
license = mit
keywords = 
root_url = https://github.com/thorwhalen/
author = Thor Whalen
display_name = owner
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

